2009-08-11  Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
  * alunn-0.7.13-2:
  FS#15813 fixed

2009-07-27  Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
  * alunn-0.7.13-1:
  New upstream release.

2008-08-31  Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
  * alunn-0.7.12-1:
  New upstream release.
  Fixed path for python2.6

2008-08-31  Alexander Fehr  <pizzapunk gmail com>
  * alunn-0.7.8-1:
  New upstream release.

2008-08-04  Alexander Fehr  <pizzapunk gmail com>
  * alunn-0.7.7-1:
  New upstream release.

2008-07-24  Alexander Fehr  <pizzapunk gmail com>
  * alunn-0.7.6-2:
  Added dependency on dbus-python.
  Replaced install file with optdepends.
  Added ChangeLog.