@@ -5,13 +5,17 @@
 
 pkgname=alunn
 pkgver=0.7.13
-pkgrel=2
+pkgrel=3
 pkgdesc="System tray notification applet for Arch Linux updates and news"
 arch=('i686' 'x86_64')
 url="http://nedrebo.org/code/alunn"
 license=('GPL')
 depends=('dbus-python' 'gnome-python')
-optdepends=('notification-daemon: Desktop notification support')
+optdepends=('notification-daemon: Desktop notification support'
+            'gksu: for default Gnome update command'
+            'terminal: for default Gnome/XFCE update command'
+            'kdesu: for default KDE update command'
+            'konsole: for default KDE update command')
 source=(http://nedrebo.org/page/code/$pkgname/.files/$pkgname-$pkgver.tar.gz)
 
 md5sums=('45de5f6beca92738148c34ee1e682897')
