@@ -1,3 +1,7 @@
+2009-11-19  Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+  * alunn-0.7.13-3:
+  FS#17192 fixed
+
 2009-08-11  Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
   * alunn-0.7.13-2:
   FS#15813 fixed
